Updated UI, fixed problems with collapse

--- a/site/css/bootstrap.css
+++ b/site/css/bootstrap.css
@@ -6184,19 +6184,20 @@ a.badge:focus {
 /* custom definitions for sections */
 
 .sliding-content {
-    padding: 10px 15px;
     background-color: #fafafa;
 }
 
+.sliding-content-inner {
+    margin:10px 20px;
+}
+
 .sliding-header-complete {
-    padding: 3px 10px;
     cursor: pointer;
     position: relative;
     background-color: #00ff13;
 }
 
 .sliding-header {
-    padding: 3px 10px;
     cursor: pointer;
     position: relative;
     background-color: #ff5252;
